fix arrow button mobile view

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -506,7 +506,7 @@ a {
   #scrollBtn {
     border-radius: 50% !important;
     bottom: 150px !important;
-    right: 30px;
+    right: 40px;
   }
   #scrollBtn i {
     font-size: 30px !important;
